@@ -225,12 +225,14 @@ namespace Mono.Cecil {
 		public override void TerminateAssemblyDefinition (AssemblyDefinition asm)
 		{
 			foreach (ModuleDefinition mod in asm.Modules) {
-				mod.Controller.Writer.VisitModuleDefinition (mod);
-				mod.Controller.Writer.VisitTypeReferenceCollection (mod.TypeReferences);
-				mod.Controller.Writer.VisitMemberReferenceCollection (mod.MemberReferences);
-				mod.Controller.Writer.VisitTypeDefinitionCollection (mod.Types);
+				ReflectionWriter writer = mod.Controller.Writer;
+				writer.VisitModuleDefinition (mod);
+				writer.VisitTypeReferenceCollection (mod.TypeReferences);
+				writer.VisitTypeDefinitionCollection (mod.Types);
+				writer.VisitMemberReferenceCollection (mod.MemberReferences);
+				writer.CompleteTypeDefinitions ();
 
-				mod.Controller.Writer.TerminateModuleDefinition (mod);
+				writer.TerminateModuleDefinition (mod);
 			}
 		}
 	}
